--- a/Land/clms-hrsi-arlie_demo-iceland/askja-use-case.ipynb
+++ b/Land/clms-hrsi-arlie_demo-iceland/askja-use-case.ipynb
@@ -896,6 +896,241 @@
    "source": [
     "The graph above shows that most of the years have a realively consistent pattern across most years. However, it also reveals that the year 2023 is different to the other years. The ice cover melts in February and March, deviating from the typical trend observed in other years. This is also what can be seen on the Sentinel-2 images shown at the start of this notebook. Concluding, we can observe the unexpected melting event at lake Öskjuvatn. ❄️🌋"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now lets check that what we see in our graph is actually happening. Lets get some Sentinel 2 imagery from February - March 2023. \n",
+    "Lets start by going to Wekeo https://www.wekeo.eu/data?view=mapRenderServices&dataset=EO%3AESA%3ADAT%3ASENTINEL-2 \n",
+    "\n",
+    "As you can see the Sentinel 2 Dataset is already added in this case, but you can see in the following image how you could choose other datasets and add them.\n",
+    "We can now copy a specific WMS link as shown in the image. \n",
+    "\n",
+    "We are getting something like this: https://sh.dataspace.copernicus.eu/ogc/wms/cb2e32e9-fe04-4313-92c4-285fe738704e?request=GetCapabilities&service=WMS.\n",
+    "We want to keep the part before \"?\".\n",
+    "\n",
+    "This link is our wms_url we will use to request the imagery from.\n",
+    "\n",
+    "Since the WMS service has multiple available layers we need to specify the wms_layer we want, in this case: \"1_TRUE_COLOR\"\n",
+    "\n",
+    "\n",
+    "<img src=\"images/Wekeo_WMS.png\" alt=\"Drawing\" style=\"width: 1800px;\"/>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Lets define our image service to stream the data from.\n",
+    "wms_url = \"https://sh.dataspace.copernicus.eu/ogc/wms/cb2e32e9-fe04-4313-92c4-285fe738704e\"\n",
+    "wms_layer = \"1_TRUE_COLOR\"  # The WMS layer name for Sentinel-2 TRUE COLOR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div style=\"width:100%;\"><div style=\"position:relative;width:100%;height:0;padding-bottom:60%;\"><span style=\"color:#565656\">Make this Notebook Trusted to load map: File -> Trust Notebook</span><iframe srcdoc=\"&lt;!DOCTYPE html&gt;\n",
+       "&lt;html&gt;\n",
+       "&lt;head&gt;\n",
+       "    \n",
+       "    &lt;meta http-equiv=&quot;content-type&quot; content=&quot;text/html; charset=UTF-8&quot; /&gt;\n",
+       "    \n",
+       "        &lt;script&gt;\n",
+       "            L_NO_TOUCH = false;\n",
+       "            L_DISABLE_3D = false;\n",
+       "        &lt;/script&gt;\n",
+       "    \n",
+       "    &lt;style&gt;html, body {width: 100%;height: 100%;margin: 0;padding: 0;}&lt;/style&gt;\n",
+       "    &lt;style&gt;#map {position:absolute;top:0;bottom:0;right:0;left:0;}&lt;/style&gt;\n",
+       "    &lt;script src=&quot;https://cdn.jsdelivr.net/npm/leaflet@1.9.3/dist/leaflet.js&quot;&gt;&lt;/script&gt;\n",
+       "    &lt;script src=&quot;https://code.jquery.com/jquery-3.7.1.min.js&quot;&gt;&lt;/script&gt;\n",
+       "    &lt;script src=&quot;https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js&quot;&gt;&lt;/script&gt;\n",
+       "    &lt;script src=&quot;https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.js&quot;&gt;&lt;/script&gt;\n",
+       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdn.jsdelivr.net/npm/leaflet@1.9.3/dist/leaflet.css&quot;/&gt;\n",
+       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css&quot;/&gt;\n",
+       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css&quot;/&gt;\n",
+       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.0/css/all.min.css&quot;/&gt;\n",
+       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.css&quot;/&gt;\n",
+       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdn.jsdelivr.net/gh/python-visualization/folium/folium/templates/leaflet.awesome.rotate.min.css&quot;/&gt;\n",
+       "    \n",
+       "            &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width,\n",
+       "                initial-scale=1.0, maximum-scale=1.0, user-scalable=no&quot; /&gt;\n",
+       "            &lt;style&gt;\n",
+       "                #map_1dcd268712dcaf44cf4705b84f8a8d47 {\n",
+       "                    position: relative;\n",
+       "                    width: 100.0%;\n",
+       "                    height: 100.0%;\n",
+       "                    left: 0.0%;\n",
+       "                    top: 0.0%;\n",
+       "                }\n",
+       "                .leaflet-container { font-size: 1rem; }\n",
+       "            &lt;/style&gt;\n",
+       "        \n",
+       "&lt;/head&gt;\n",
+       "&lt;body&gt;\n",
+       "    \n",
+       "    \n",
+       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_1dcd268712dcaf44cf4705b84f8a8d47&quot; &gt;&lt;/div&gt;\n",
+       "        \n",
+       "&lt;/body&gt;\n",
+       "&lt;script&gt;\n",
+       "    \n",
+       "    \n",
+       "            var map_1dcd268712dcaf44cf4705b84f8a8d47 = L.map(\n",
+       "                &quot;map_1dcd268712dcaf44cf4705b84f8a8d47&quot;,\n",
+       "                {\n",
+       "                    center: [65.034, -16.748],\n",
+       "                    crs: L.CRS.EPSG3857,\n",
+       "                    zoom: 10,\n",
+       "                    zoomControl: true,\n",
+       "                    preferCanvas: false,\n",
+       "                }\n",
+       "            );\n",
+       "\n",
+       "            \n",
+       "\n",
+       "        \n",
+       "    \n",
+       "            var tile_layer_9df61be5b54310f97b538a04433c52a1 = L.tileLayer(\n",
+       "                &quot;https://tile.openstreetmap.org/{z}/{x}/{y}.png&quot;,\n",
+       "                {&quot;attribution&quot;: &quot;\\u0026copy; \\u003ca href=\\&quot;https://www.openstreetmap.org/copyright\\&quot;\\u003eOpenStreetMap\\u003c/a\\u003e contributors&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 19, &quot;maxZoom&quot;: 19, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
+       "            );\n",
+       "        \n",
+       "    \n",
+       "            tile_layer_9df61be5b54310f97b538a04433c52a1.addTo(map_1dcd268712dcaf44cf4705b84f8a8d47);\n",
+       "        \n",
+       "    \n",
+       "            var macro_element_d927674edc42f8398f9255edb7de1297 = L.tileLayer.wms(\n",
+       "                &quot;https://sh.dataspace.copernicus.eu/ogc/wms/cb2e32e9-fe04-4313-92c4-285fe738704e&quot;,\n",
+       "                {&quot;attribution&quot;: &quot;&quot;, &quot;format&quot;: &quot;image/png&quot;, &quot;layers&quot;: &quot;1_TRUE_COLOR&quot;, &quot;styles&quot;: &quot;&quot;, &quot;time&quot;: &quot;2023-02-08&quot;, &quot;transparent&quot;: true, &quot;version&quot;: &quot;1.3.0&quot;}\n",
+       "            );\n",
+       "        \n",
+       "    \n",
+       "            macro_element_d927674edc42f8398f9255edb7de1297.addTo(map_1dcd268712dcaf44cf4705b84f8a8d47);\n",
+       "        \n",
+       "    \n",
+       "            var macro_element_86876abaf47bdad6d921158235f68b10 = L.tileLayer.wms(\n",
+       "                &quot;https://sh.dataspace.copernicus.eu/ogc/wms/cb2e32e9-fe04-4313-92c4-285fe738704e&quot;,\n",
+       "                {&quot;attribution&quot;: &quot;&quot;, &quot;format&quot;: &quot;image/png&quot;, &quot;layers&quot;: &quot;1_TRUE_COLOR&quot;, &quot;styles&quot;: &quot;&quot;, &quot;time&quot;: &quot;2023-02-17&quot;, &quot;transparent&quot;: true, &quot;version&quot;: &quot;1.3.0&quot;}\n",
+       "            );\n",
+       "        \n",
+       "    \n",
+       "            macro_element_86876abaf47bdad6d921158235f68b10.addTo(map_1dcd268712dcaf44cf4705b84f8a8d47);\n",
+       "        \n",
+       "    \n",
+       "            var macro_element_0bc5b28ee7f86f2ebabbc4284a5d52cc = L.tileLayer.wms(\n",
+       "                &quot;https://sh.dataspace.copernicus.eu/ogc/wms/cb2e32e9-fe04-4313-92c4-285fe738704e&quot;,\n",
+       "                {&quot;attribution&quot;: &quot;&quot;, &quot;format&quot;: &quot;image/png&quot;, &quot;layers&quot;: &quot;1_TRUE_COLOR&quot;, &quot;styles&quot;: &quot;&quot;, &quot;time&quot;: &quot;2023-02-28&quot;, &quot;transparent&quot;: true, &quot;version&quot;: &quot;1.3.0&quot;}\n",
+       "            );\n",
+       "        \n",
+       "    \n",
+       "            macro_element_0bc5b28ee7f86f2ebabbc4284a5d52cc.addTo(map_1dcd268712dcaf44cf4705b84f8a8d47);\n",
+       "        \n",
+       "    \n",
+       "            var layer_control_3d79ad8cbab31502e59268943523af7c_layers = {\n",
+       "                base_layers : {\n",
+       "                    &quot;openstreetmap&quot; : tile_layer_9df61be5b54310f97b538a04433c52a1,\n",
+       "                },\n",
+       "                overlays :  {\n",
+       "                    &quot;Sentinel-2 (2023-02-08)&quot; : macro_element_d927674edc42f8398f9255edb7de1297,\n",
+       "                    &quot;Sentinel-2 (2023-02-17)&quot; : macro_element_86876abaf47bdad6d921158235f68b10,\n",
+       "                    &quot;Sentinel-2 (2023-02-28)&quot; : macro_element_0bc5b28ee7f86f2ebabbc4284a5d52cc,\n",
+       "                },\n",
+       "            };\n",
+       "            let layer_control_3d79ad8cbab31502e59268943523af7c = L.control.layers(\n",
+       "                layer_control_3d79ad8cbab31502e59268943523af7c_layers.base_layers,\n",
+       "                layer_control_3d79ad8cbab31502e59268943523af7c_layers.overlays,\n",
+       "                {&quot;autoZIndex&quot;: true, &quot;collapsed&quot;: false, &quot;position&quot;: &quot;topright&quot;}\n",
+       "            ).addTo(map_1dcd268712dcaf44cf4705b84f8a8d47);\n",
+       "\n",
+       "        \n",
+       "&lt;/script&gt;\n",
+       "&lt;/html&gt;\" style=\"position:absolute;width:100%;height:100%;left:0;top:0;border:none !important;\" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe></div></div>"
+      ],
+      "text/plain": [
+       "<folium.folium.Map at 0x2655c6c0bc0>"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#!pip install folium\n",
+    "import folium\n",
+    "\n",
+    "# Step 1: Define the coordinates for Lake Askja\n",
+    "lake_askja_coords = [65.034, -16.748]  # Latitude and longitude of Lake Askja, Iceland\n",
+    "\n",
+    "# Step 2: Create a Folium map centered on Lake Askja\n",
+    "m = folium.Map(location=lake_askja_coords, zoom_start=10)\n",
+    "\n",
+    "# Step 3: Add WMS layers for different dates\n",
+    "\n",
+    "# Add the WMS layer for 2023-02-08\n",
+    "folium.raster_layers.WmsTileLayer(\n",
+    "    url=wms_url,\n",
+    "    name=\"Sentinel-2 (2023-02-08)\",\n",
+    "    layers=wms_layer,\n",
+    "    fmt=\"image/png\",\n",
+    "    transparent=True,\n",
+    "    version=\"1.3.0\",\n",
+    "    styles='',\n",
+    "    time=\"2023-02-08\",  # Date of the imagery\n",
+    "    overlay=True,\n",
+    "    control=True  # Enable this layer to be selectable\n",
+    ").add_to(m)\n",
+    "\n",
+    "# Add the WMS layer for 2023-02-17\n",
+    "folium.raster_layers.WmsTileLayer(\n",
+    "    url=wms_url,\n",
+    "    name=\"Sentinel-2 (2023-02-17)\",\n",
+    "    layers=wms_layer,\n",
+    "    fmt=\"image/png\",\n",
+    "    transparent=True,\n",
+    "    version=\"1.3.0\",\n",
+    "    styles='',\n",
+    "    time=\"2023-02-17\",  # Date of the imagery\n",
+    "    overlay=True,\n",
+    "    control=True  # Enable this layer to be selectable\n",
+    ").add_to(m)\n",
+    "\n",
+    "# Add the WMS layer for 2023-02-28\n",
+    "folium.raster_layers.WmsTileLayer(\n",
+    "    url=wms_url,\n",
+    "    name=\"Sentinel-2 (2023-02-28)\",\n",
+    "    layers=wms_layer,\n",
+    "    fmt=\"image/png\",\n",
+    "    transparent=True,\n",
+    "    version=\"1.3.0\",\n",
+    "    styles='',\n",
+    "    time=\"2023-02-28\",  # Date of the imagery\n",
+    "    overlay=True,\n",
+    "    control=True  # Enable this layer to be selectable\n",
+    ").add_to(m)\n",
+    "\n",
+    "# Step 4: Add LayerControl to allow users to toggle between layers\n",
+    "folium.LayerControl(collapsed=False).add_to(m)\n",
+    "\n",
+    "# Step 5: Display the map\n",
+    "m\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, we can clearly see the melting of the ice on lake askja!"
+   ]
   }
  ],
  "metadata": {
@@ -914,7 +1149,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
