update how to ARLIE

--- a/Land/clms-hrsi-arlie_demo-iceland/how-to-get-started.ipynb
+++ b/Land/clms-hrsi-arlie_demo-iceland/how-to-get-started.ipynb
@@ -83,8 +83,12 @@
     "\n",
     "# to uncomment a line, select the line and press ctrl+/ or delete the # and space\n",
     "%pip install pandas\n",
-    "# %pip install matplotlib\n",
-    "# %pip install pyplot\n",
+    "%pip install matplotlib\n",
+    "%pip install pyplot\n",
+    "\n",
+    "# plotly is a library for interactive plots\n",
+    "# %pip install plotly\n",
+    "# %pip install nbformat>=4.2.0\n",
     "\n"
    ]
   },
@@ -1566,8 +1570,8 @@
    "outputs": [],
    "source": [
     "# plotly is a library for interactive plots\n",
-    "%pip install plotly\n",
-    "%pip install nbformat>=4.2.0"
+    "# %pip install plotly\n",
+    "# %pip install nbformat>=4.2.0"
    ]
   },
   {
