update client configuration

--- a/Land/land_use/urban/training_urban.ipynb
+++ b/Land/land_use/urban/training_urban.ipynb
@@ -310,11 +310,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "id": "1ffab98a-5d38-4625-8e06-77e33ba70b0b",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Regulat users, local configuration\n",
     "# Default location expected by hda package\n",
     "hdarc = Path(Path.home() / '.hdarc')\n",
     "\n",
@@ -326,6 +327,21 @@
     "    with open(Path.home() / '.hdarc', 'w') as f:\n",
     "        f.write(f'user:{USERNAME}\\n')\n",
     "        f.write(f'password:{PASSWORD}\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f262725",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize the Data Access client, unregular users\n",
+    "from hda import Client, Configuration\n",
+    "\n",
+    "# Configure user's credentials without a .hdarc\n",
+    "conf = Configuration(user = \"hrabalikovanatt\", password = \"Sk@738586\")\n",
+    "hda_client = Client(config = conf)"
    ]
   },
   {
@@ -346,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "id": "b23a079a-5cd7-4346-b323-ee3dee402558",
    "metadata": {},
    "outputs": [
@@ -358,7 +374,7 @@
        " 'version': 'Unspecified'}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "id": "94136cc1-e539-4a2b-9016-2f4d798c1946",
    "metadata": {},
    "outputs": [
@@ -412,8 +428,12 @@
     "  \"startIndex\": 0\n",
     "}\n",
     "\n",
-    "## Run the search with query\n",
-    "matches = c.search(data)\n",
+    "## Run the search with query locally defined\n",
+    "# matches = c.search(data)\n",
+    "\n",
+    "## Run the search with query wekeo jupyter lab defined\n",
+    "matches = hda_client.search(data)\n",
+    "\n",
     "\n",
     "## Print results\n",
     "print(matches)\n",
@@ -430,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "id": "7fe78c89-ab41-422d-b355-1b94d9b4b829",
    "metadata": {},
    "outputs": [
