--- a/cams/da-ads-tutorial.ipynb
+++ b/cams/da-ads-tutorial.ipynb
@@ -82,11 +82,11 @@
     "<table align=\"left\">\n",
     "  <tr>\n",
     "    <th>Run the tutorial via free cloud platforms: </th>\n",
-    "    <th><a href=\"https://mybinder.org/v2/gh/lmi/Copernicus/master?labpath=da-ads-tutorial.ipynb\">\n",
+    "    <th><a href=\"https://mybinder.org/v2/gh/lmi/Copernicus/master?labpath=cams/da-ads-tutorial.ipynb\">\n",
     "        <img src = \"https://mybinder.org/badge.svg\" alt = \"Binder\"></th>\n",
-    "    <th><a href=\"https://kaggle.com/kernels/welcome?src=https://github.com/lmi/Copernicus/blob/master/da-ads-tutorial.ipynb\">\n",
+    "    <th><a href=\"https://kaggle.com/kernels/welcome?src=https://github.com/lmi/Copernicus/blob/master/cams/da-ads-tutorial.ipynb\">\n",
     "        <img src = \"https://kaggle.com/static/images/open-in-kaggle.svg\" alt = \"Kaggle\"></th>\n",
-    "    <th><a href=\"https://colab.research.google.com/github/elmi/Copernicus/blob/master/da-ads-tutorial.ipynb\">\n",
+    "    <th><a href=\"https://colab.research.google.com/github/lmi/Copernicus/blob/master/cams/da-ads-tutorial.ipynb\">\n",
     "        <img src = \"https://colab.research.google.com/assets/colab-badge.svg\" alt = \"Colab\"></th>\n",
     "  </tr>\n",
     "</table>"
