--- a/cams/da-ads-tutorial.ipynb
+++ b/cams/da-ads-tutorial.ipynb
@@ -12,8 +12,8 @@
    "metadata": {},
    "source": [
     "<div style=\"text-align: center;\">\n",
-    "  <img src=\"./img/logo/lmi_logo1.png\" alt=\"logo\" width=\"50\" height=\"60\">\n",
-    "\n",
+    "  <img src=\"./img/logo/lbhi_logo_transp.png\" alt=\"logo\" width=\"50\" height=\"60\">\n",
+    "  <img src=\"./img/logo/lbhi_logo_transp.png\" alt=\"logo\" width=\"220\" height=\"60\">\n",
     "</div>"
    ]
   },
